plugins {
    id 'java'
}

version '1.0-SNAPSHOT'

sourceCompatibility = '1.11'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.5.0-RC1')
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
